after cp adjustment for java 8