@@ -202,7 +202,7 @@ public class BatchReportEntry4Wrapper extends BatchReportEntryWrapper
 				.map(str -> Arrays.asList(str.split(" ")))
 				.flatMap(List::stream)
 				.filter(Check::isNotBlank)
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 	@Override
@@ -225,7 +225,7 @@ public class BatchReportEntry4Wrapper extends BatchReportEntryWrapper
 		{
 			lineDesc.addAll( Arrays.stream(addtlNtryInfStr.split(" "))
 									 .filter(Check::isNotBlank)
-									 .toList());
+									 .collect(Collectors.toList()));
 		}
 
 		final List<String> trxDetails = getEntryTransaction()
@@ -235,7 +235,7 @@ public class BatchReportEntry4Wrapper extends BatchReportEntryWrapper
 				.map(str -> Arrays.asList(str.split(" ")))
 				.flatMap(List::stream)
 				.filter(Check::isNotBlank)
-				.toList();
+				.collect(Collectors.toList());
 
 		lineDesc.addAll(trxDetails);
 
